<resources>
    <string name="app_name">BasketApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_a_text">Team A</string>
    <string name="initial_score">0</string>
    <string name="hint_team">Team</string>
    <string name="score_one_button">+1</string>
    <string name="score_two_button">+2</string>
    <string name="score_three_button">+3</string>
    <string name="result_text_button">Resultado</string>
    <string name="team_b_text">Team B</string>
</resources>